--- a/new_resume.ipynb
+++ b/new_resume.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/parthvinm/anaconda3/envs/nlp_project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import PyPDF2\n",
     "import google.generativeai as genai\n",
@@ -1422,12 +1431,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_resumes.to_csv('resume_recs.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
