--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,12 +74,12 @@
     "    vectorizer = TfidfVectorizer()\n",
     "    vectors = vectorizer.fit_transform([document1, document2])\n",
     "    cosine_similarity_score = pairwise.cosine_similarity(vectors[0], vectors[1])\n",
-    "    return cosine_similarity_score.item()"
+    "    return cosine_similarity_score.item()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,12 +103,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to extract and concatenate all text from a resume\n",
+    "def extract_full_resume_text(json_data):\n",
+    "    try:\n",
+    "        sections = []\n",
+    "        for key, value in json_data.items():\n",
+    "            if isinstance(value, list):\n",
+    "                for item in value:\n",
+    "                    if isinstance(item, dict):\n",
+    "                        sections.append(\" \".join(f\"{k}: {v}\" for k, v in item.items() if isinstance(v, str)))\n",
+    "                    else:\n",
+    "                        sections.append(str(item))\n",
+    "            elif isinstance(value, dict):\n",
+    "                sections.append(\" \".join(f\"{k}: {v}\" for k, v in value.items() if isinstance(v, str)))\n",
+    "            else:\n",
+    "                sections.append(str(value))\n",
+    "        return \" \".join(sections)\n",
+    "    except (json.JSONDecodeError, AttributeError):\n",
+    "        return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to process each row\n",
     "def process_resume_row(row):\n",
+    "    if pd.isna(row['new_resume']):\n",
+    "        return pd.Series([0.0, 0.0, 0.0])  # Assign 0 similarity for empty new_resume\n",
     "    try:\n",
     "        # Load JSON objects\n",
     "        resume_json = json.loads(row['resume_json'])\n",
@@ -120,61 +148,61 @@
     "        work_ex_new_resume = extract_and_process_field(new_resume_json, 'work_experience')\n",
     "        projects_new_resume = extract_and_process_field(new_resume_json, 'projects')\n",
     "\n",
+    "        # Extract and process the full resume text\n",
+    "        full_resume_text = extract_full_resume_text(resume_json)\n",
+    "        full_new_resume_text = extract_full_resume_text(new_resume_json)\n",
+    "\n",
     "        # Normalize text\n",
     "        work_ex_resume_normalized = \" \".join(normalize_text(work_ex_resume))\n",
     "        projects_resume_normalized = \" \".join(normalize_text(projects_resume))\n",
     "        work_ex_new_resume_normalized = \" \".join(normalize_text(work_ex_new_resume))\n",
     "        projects_new_resume_normalized = \" \".join(normalize_text(projects_new_resume))\n",
+    "        full_resume_normalized = \" \".join(normalize_text(full_resume_text))\n",
+    "        full_new_resume_normalized = \" \".join(normalize_text(full_new_resume_text))\n",
     "\n",
     "        # Calculate cosine similarities\n",
     "        work_ex_score = cosine_similarity(work_ex_resume_normalized, work_ex_new_resume_normalized)\n",
     "        projects_score = cosine_similarity(projects_resume_normalized, projects_new_resume_normalized)\n",
+    "        full_resume_score = cosine_similarity(full_resume_normalized, full_new_resume_normalized)\n",
     "\n",
     "        # Return similarity scores\n",
-    "        return pd.Series([work_ex_score, projects_score])\n",
+    "        return pd.Series([work_ex_score, projects_score, full_resume_score])\n",
     "\n",
     "    except json.JSONDecodeError:\n",
     "        # Handle JSON decoding errors\n",
-    "        return pd.Series([None, None])"
+    "        return pd.Series([None, None, None])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage with a DataFrame 'df'\n",
+    "df = pd.read_csv('new_resumes_gpt.csv')  # Assuming you load your DataFrame from a CSV file\n",
+    "\n",
+    "# Apply the function to each row\n",
+    "df[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity']] = df.apply(process_resume_row, axis=1)\n",
+    "\n",
+    "# Save the DataFrame to a new CSV file\n",
+    "df.to_csv('new_resumes_gpt_wsim.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example usage with a DataFrame 'df'\n",
     "df = pd.read_csv('new_resumes.csv')  # Assuming you load your DataFrame from a CSV file\n",
     "\n",
-    "# Filter out rows where new_resume is empty\n",
-    "df = df[df['new_resume'].notna()]\n",
-    "\n",
     "# Apply the function to each row\n",
-    "df[['work_ex_similarity', 'projects_similarity']] = df.apply(process_resume_row, axis=1)\n",
+    "df[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity']] = df.apply(process_resume_row, axis=1)\n",
     "\n",
     "# Save the DataFrame to a new CSV file\n",
     "df.to_csv('new_resumes_wsim.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.26909632511407555"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.iloc[0]['projects_similarity']"
    ]
   }
  ],
