--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -129,18 +129,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to process each row\n",
+    "# Function to extract and concatenate all text from a JSON\n",
+    "def extract_full_text(json_data):\n",
+    "    try:\n",
+    "        sections = []\n",
+    "        for key, value in json_data.items():\n",
+    "            if isinstance(value, list):\n",
+    "                for item in value:\n",
+    "                    if isinstance(item, dict):\n",
+    "                        sections.append(\" \".join(f\"{k}: {v}\" for k, v in item.items() if isinstance(v, str)))\n",
+    "                    else:\n",
+    "                        sections.append(str(item))\n",
+    "            elif isinstance(value, dict):\n",
+    "                sections.append(\" \".join(f\"{k}: {v}\" for k, v in value.items() if isinstance(v, str)))\n",
+    "            else:\n",
+    "                sections.append(str(value))\n",
+    "        return \" \".join(sections)\n",
+    "    except (json.JSONDecodeError, AttributeError):\n",
+    "        return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_resume_row(row):\n",
     "    if pd.isna(row['new_resume']):\n",
-    "        return pd.Series([0.0, 0.0, 0.0])  # Assign 0 similarity for empty new_resume\n",
+    "        return pd.Series([0.0, 0.0, 0.0, 0.0, 0.0])  # Assign 0 similarity for empty new_resume\n",
     "    try:\n",
     "        # Load JSON objects\n",
     "        resume_json = json.loads(row['resume_json'])\n",
     "        new_resume_json = json.loads(row['new_resume'])\n",
+    "        job_json = json.loads(row['job_json'])\n",
     "\n",
     "        # Extract and process work experience and projects\n",
     "        work_ex_resume = extract_and_process_field(resume_json, 'work_experience')\n",
@@ -148,9 +174,10 @@
     "        work_ex_new_resume = extract_and_process_field(new_resume_json, 'work_experience')\n",
     "        projects_new_resume = extract_and_process_field(new_resume_json, 'projects')\n",
     "\n",
-    "        # Extract and process the full resume text\n",
-    "        full_resume_text = extract_full_resume_text(resume_json)\n",
-    "        full_new_resume_text = extract_full_resume_text(new_resume_json)\n",
+    "        # Extract and process the full texts\n",
+    "        full_resume_text = extract_full_text(resume_json)\n",
+    "        full_new_resume_text = extract_full_text(new_resume_json)\n",
+    "        full_job_text = extract_full_text(job_json)\n",
     "\n",
     "        # Normalize text\n",
     "        work_ex_resume_normalized = \" \".join(normalize_text(work_ex_resume))\n",
@@ -159,23 +186,26 @@
     "        projects_new_resume_normalized = \" \".join(normalize_text(projects_new_resume))\n",
     "        full_resume_normalized = \" \".join(normalize_text(full_resume_text))\n",
     "        full_new_resume_normalized = \" \".join(normalize_text(full_new_resume_text))\n",
+    "        full_job_normalized = \" \".join(normalize_text(full_job_text))\n",
     "\n",
     "        # Calculate cosine similarities\n",
     "        work_ex_score = cosine_similarity(work_ex_resume_normalized, work_ex_new_resume_normalized)\n",
     "        projects_score = cosine_similarity(projects_resume_normalized, projects_new_resume_normalized)\n",
     "        full_resume_score = cosine_similarity(full_resume_normalized, full_new_resume_normalized)\n",
+    "        resume_job_score = cosine_similarity(full_resume_normalized, full_job_normalized)\n",
+    "        new_resume_job_score = cosine_similarity(full_new_resume_normalized, full_job_normalized)\n",
     "\n",
     "        # Return similarity scores\n",
-    "        return pd.Series([work_ex_score, projects_score, full_resume_score])\n",
+    "        return pd.Series([work_ex_score, projects_score, full_resume_score, resume_job_score, new_resume_job_score])\n",
     "\n",
     "    except json.JSONDecodeError:\n",
     "        # Handle JSON decoding errors\n",
-    "        return pd.Series([None, None, None])"
+    "        return pd.Series([None, None, None, None, None])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +213,7 @@
     "df = pd.read_csv('new_resumes_gpt.csv')  # Assuming you load your DataFrame from a CSV file\n",
     "\n",
     "# Apply the function to each row\n",
-    "df[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity']] = df.apply(process_resume_row, axis=1)\n",
+    "df[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df.apply(process_resume_row, axis=1)\n",
     "\n",
     "# Save the DataFrame to a new CSV file\n",
     "df.to_csv('new_resumes_gpt_wsim.csv', index=False)"
@@ -191,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +229,7 @@
     "df = pd.read_csv('new_resumes.csv')  # Assuming you load your DataFrame from a CSV file\n",
     "\n",
     "# Apply the function to each row\n",
-    "df[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity']] = df.apply(process_resume_row, axis=1)\n",
+    "df[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df.apply(process_resume_row, axis=1)\n",
     "\n",
     "# Save the DataFrame to a new CSV file\n",
     "df.to_csv('new_resumes_wsim.csv', index=False)"
