updated metrics calc

--- a/metrics_gpt.ipynb
+++ b/metrics_gpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,12 +31,16 @@
     "import pandas as pd\n",
     "import json\n",
     "import re\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics import pairwise\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
     "from nltk.tokenize import word_tokenize\n",
+    "import openai\n",
+    "import numpy as np\n",
+    "\n",
+    "# Set your OpenAI API key\n",
+    "openai.api_key = \"sk-proj-Cw1drZV2K9ag9wXRLR2pT3BlbkFJZ9SiI26TtRgTVc9dT1UE\" \n",
     "\n",
     "# Download required NLTK data\n",
     "nltk.download('stopwords')\n",
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,22 +68,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define cosine similarity function\n",
-    "def cosine_similarity(document1: str, document2: str) -> float:\n",
-    "    \"\"\"Calculate the cosine similarity between two documents.\"\"\"\n",
-    "    vectorizer = TfidfVectorizer()\n",
-    "    vectors = vectorizer.fit_transform([document1, document2])\n",
-    "    cosine_similarity_score = pairwise.cosine_similarity(vectors[0], vectors[1])\n",
+    "# Truncate text to a specified token limit\n",
+    "def truncate_text(text: str, token_limit: int = 512) -> str:\n",
+    "    \"\"\"Truncate text to a specified number of tokens.\"\"\"\n",
+    "    if isinstance(text, str):\n",
+    "        words = text.split()\n",
+    "        return \" \".join(words[:token_limit])\n",
+    "    return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define cosine similarity function using OpenAI embeddings\n",
+    "def cosine_similarity_openai(document1: str, document2: str) -> float:\n",
+    "    \"\"\"Calculate the cosine similarity between two documents using OpenAI embeddings.\"\"\"\n",
+    "    # Ensure documents are strings\n",
+    "    document1 = \" \".join(document1) if isinstance(document1, list) else document1\n",
+    "    document2 = \" \".join(document2) if isinstance(document2, list) else document2\n",
+    "    \n",
+    "    # Truncate documents to fit within token limits\n",
+    "    document1 = truncate_text(document1)\n",
+    "    document2 = truncate_text(document2)\n",
+    "    \n",
+    "    # Generate embeddings for the documents\n",
+    "    response = openai.Embedding.create(\n",
+    "        input=[document1, document2], \n",
+    "        model=\"text-embedding-ada-002\"\n",
+    "    )\n",
+    "    vectors = np.array([data['embedding'] for data in response['data']])\n",
+    "    \n",
+    "    # Calculate cosine similarity between the embeddings\n",
+    "    cosine_similarity_score = cosine_similarity(vectors[0].reshape(1, -1), vectors[1].reshape(1, -1))\n",
     "    return cosine_similarity_score.item()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,10 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Process each row of the dataframe\n",
     "def process_resume_row(row):\n",
     "    if pd.isna(row['new_resume']):\n",
     "        return pd.Series([0.0, 0.0, 0.0, 0.0, 0.0])  # Assign 0 similarity for empty new_resume\n",
@@ -180,23 +214,29 @@
     "        full_job_text = extract_full_text(job_json)\n",
     "\n",
     "        # Normalize text\n",
-    "        work_ex_resume_normalized = \" \".join(normalize_text(work_ex_resume))\n",
-    "        projects_resume_normalized = \" \".join(normalize_text(projects_resume))\n",
-    "        work_ex_new_resume_normalized = \" \".join(normalize_text(work_ex_new_resume))\n",
-    "        projects_new_resume_normalized = \" \".join(normalize_text(projects_new_resume))\n",
-    "        full_resume_normalized = \" \".join(normalize_text(full_resume_text))\n",
-    "        full_new_resume_normalized = \" \".join(normalize_text(full_new_resume_text))\n",
-    "        full_job_normalized = \" \".join(normalize_text(full_job_text))\n",
+    "        work_ex_resume_normalized = normalize_text(work_ex_resume)\n",
+    "        projects_resume_normalized = normalize_text(projects_resume)\n",
+    "        work_ex_new_resume_normalized = normalize_text(work_ex_new_resume)\n",
+    "        projects_new_resume_normalized = normalize_text(projects_new_resume)\n",
+    "        full_resume_normalized = normalize_text(full_resume_text)\n",
+    "        full_new_resume_normalized = normalize_text(full_new_resume_text)\n",
+    "        full_job_normalized = normalize_text(full_job_text)\n",
     "\n",
     "        # Calculate cosine similarities\n",
-    "        work_ex_score = cosine_similarity(work_ex_resume_normalized, work_ex_new_resume_normalized)\n",
-    "        projects_score = cosine_similarity(projects_resume_normalized, projects_new_resume_normalized)\n",
-    "        full_resume_score = cosine_similarity(full_resume_normalized, full_new_resume_normalized)\n",
-    "        resume_job_score = cosine_similarity(full_resume_normalized, full_job_normalized)\n",
-    "        new_resume_job_score = cosine_similarity(full_new_resume_normalized, full_job_normalized)\n",
+    "        work_ex_score = cosine_similarity_openai(work_ex_resume_normalized, work_ex_new_resume_normalized)\n",
+    "        projects_score = cosine_similarity_openai(projects_resume_normalized, projects_new_resume_normalized)\n",
+    "        full_resume_score = cosine_similarity_openai(full_resume_normalized, full_new_resume_normalized)\n",
+    "        resume_job_score = cosine_similarity_openai(full_resume_normalized, full_job_normalized)\n",
+    "        new_resume_job_score = cosine_similarity_openai(full_new_resume_normalized, full_job_normalized)\n",
     "\n",
-    "        # Return similarity scores\n",
-    "        return pd.Series([work_ex_score, projects_score, full_resume_score, resume_job_score, new_resume_job_score])\n",
+    "        # Round similarity scores to 2 decimal places\n",
+    "        return pd.Series([\n",
+    "            round(work_ex_score, 2), \n",
+    "            round(projects_score, 2), \n",
+    "            round(full_resume_score, 2), \n",
+    "            round(resume_job_score, 2), \n",
+    "            round(new_resume_job_score, 2)\n",
+    "        ])\n",
     "\n",
     "    except json.JSONDecodeError:\n",
     "        # Handle JSON decoding errors\n",
@@ -205,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Improvement Percentage: 185.71%\n"
+      "Average Improvement Percentage: 2.19%\n"
      ]
     }
    ],
@@ -223,9 +263,9 @@
     "# Apply the function to each row\n",
     "df_gpt[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df_gpt.apply(process_resume_row, axis=1)\n",
     "\n",
-    "# Calculate improvement percentage, handle division by zero\n",
+    "# Calculate improvement percentage, handle division by zero and negative values\n",
     "df_gpt['improvement_percentage'] = df_gpt.apply(\n",
-    "    lambda row: ((row['new_resume_job_similarity'] - row['resume_job_similarity']) / row['resume_job_similarity']) * 100 if row['resume_job_similarity'] else 0, axis=1\n",
+    "    lambda row: max(((row['new_resume_job_similarity'] - row['resume_job_similarity']) / row['resume_job_similarity']) * 100, 0) if row['resume_job_similarity'] else 0, axis=1\n",
     ")\n",
     "\n",
     "# Print the average improvement percentage\n",
@@ -233,19 +273,19 @@
     "print(f\"Average Improvement Percentage: {avg_improvement_percentage:.2f}%\")\n",
     "\n",
     "# Save the DataFrame to a new CSV file\n",
-    "df_gpt.to_csv('new_resumes_gpt_wsim.csv', index=False)"
+    "df_gpt.to_csv('new_resumes_gpt_wsimgpt.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Improvement Percentage: 254.77%\n"
+      "Average Improvement Percentage: 1.66%\n"
      ]
     }
    ],
@@ -256,9 +296,9 @@
     "# Apply the function to each row\n",
     "df[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df.apply(process_resume_row, axis=1)\n",
     "\n",
-    "# Calculate improvement percentage, handle division by zero\n",
+    "# Calculate improvement percentage, handle division by zero and negative values\n",
     "df['improvement_percentage'] = df.apply(\n",
-    "    lambda row: ((row['new_resume_job_similarity'] - row['resume_job_similarity']) / row['resume_job_similarity']) * 100 if row['resume_job_similarity'] else 0, axis=1\n",
+    "    lambda row: max(((row['new_resume_job_similarity'] - row['resume_job_similarity']) / row['resume_job_similarity']) * 100, 0) if row['resume_job_similarity'] else 0, axis=1\n",
     ")\n",
     "\n",
     "# Print the average improvement percentage\n",
@@ -266,7 +306,7 @@
     "print(f\"Average Improvement Percentage: {avg_improvement_percentage:.2f}%\")\n",
     "\n",
     "# Save the DataFrame to a new CSV file\n",
-    "df.to_csv('new_resumes_wsim.csv', index=False)"
+    "df.to_csv('new_resumes_wsimgpt.csv', index=False)"
    ]
   }
  ],
