metrics calc update

--- a/metrics_gpt.ipynb
+++ b/metrics_gpt.ipynb
@@ -49,12 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define text normalization function\n",
-    "def normalize_text(text: str) -> list:\n",
+    "def normalize_text(text: str) -> str:\n",
     "    \"\"\"Normalize the input text.\"\"\"\n",
     "    words = word_tokenize(text)\n",
     "    words = [re.sub('[^a-zA-Z]', '', word).lower() for word in words]\n",
@@ -63,12 +62,12 @@
     "    words = [word for word in words if word not in stop_words]\n",
     "    stemmer = PorterStemmer()\n",
     "    words = [stemmer.stem(word) for word in words]\n",
-    "    return words"
+    "    return \" \".join(words)  # Ensure it returns a string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,36 +82,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define cosine similarity function using OpenAI embeddings\n",
+    "# Function to split text into chunks\n",
+    "def split_into_chunks(text, max_tokens=512):\n",
+    "    words = text.split()\n",
+    "    for i in range(0, len(words), max_tokens):\n",
+    "        yield \" \".join(words[i:i + max_tokens])\n",
+    "\n",
+    "# Define cosine similarity function using OpenAI embeddings with chunking\n",
     "def cosine_similarity_openai(document1: str, document2: str) -> float:\n",
-    "    \"\"\"Calculate the cosine similarity between two documents using OpenAI embeddings.\"\"\"\n",
-    "    # Ensure documents are strings\n",
-    "    document1 = \" \".join(document1) if isinstance(document1, list) else document1\n",
-    "    document2 = \" \".join(document2) if isinstance(document2, list) else document2\n",
+    "    \"\"\"Calculate the cosine similarity between two documents using OpenAI embeddings with chunking.\"\"\"\n",
+    "    # Split documents into chunks\n",
+    "    chunks1 = list(split_into_chunks(document1))\n",
+    "    chunks2 = list(split_into_chunks(document2))\n",
     "    \n",
-    "    # Truncate documents to fit within token limits\n",
-    "    document1 = truncate_text(document1)\n",
-    "    document2 = truncate_text(document2)\n",
-    "    \n",
-    "    # Generate embeddings for the documents\n",
+    "    # Generate embeddings for all chunks\n",
+    "    all_chunks = chunks1 + chunks2\n",
     "    response = openai.Embedding.create(\n",
-    "        input=[document1, document2], \n",
+    "        input=all_chunks, \n",
     "        model=\"text-embedding-ada-002\"\n",
     "    )\n",
-    "    vectors = np.array([data['embedding'] for data in response['data']])\n",
+    "    embeddings = [data['embedding'] for data in response['data']]\n",
     "    \n",
-    "    # Calculate cosine similarity between the embeddings\n",
-    "    cosine_similarity_score = cosine_similarity(vectors[0].reshape(1, -1), vectors[1].reshape(1, -1))\n",
-    "    return cosine_similarity_score.item()\n"
+    "    # Separate embeddings for document1 and document2\n",
+    "    embeddings1 = np.array(embeddings[:len(chunks1)])\n",
+    "    embeddings2 = np.array(embeddings[len(chunks1):])\n",
+    "    \n",
+    "    # Average the embeddings\n",
+    "    average_embedding1 = np.mean(embeddings1, axis=0)\n",
+    "    average_embedding2 = np.mean(embeddings2, axis=0)\n",
+    "    \n",
+    "    # Calculate cosine similarity between the averaged embeddings\n",
+    "    cosine_similarity_score = cosine_similarity(average_embedding1.reshape(1, -1), average_embedding2.reshape(1, -1))\n",
+    "    return cosine_similarity_score.item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,47 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Improvement Percentage: 2.19%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example usage with a DataFrame 'df_gpt'\n",
-    "df_gpt = pd.read_csv('new_resumes_gpt.csv')  # Assuming you load your DataFrame from a CSV file\n",
-    "\n",
-    "# Apply the function to each row\n",
-    "df_gpt[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df_gpt.apply(process_resume_row, axis=1)\n",
-    "\n",
-    "# Calculate improvement percentage, handle division by zero and negative values\n",
-    "df_gpt['improvement_percentage'] = df_gpt.apply(\n",
-    "    lambda row: max(((row['new_resume_job_similarity'] - row['resume_job_similarity']) / row['resume_job_similarity']) * 100, 0) if row['resume_job_similarity'] else 0, axis=1\n",
-    ")\n",
-    "\n",
-    "# Print the average improvement percentage\n",
-    "avg_improvement_percentage = df_gpt['improvement_percentage'].mean()\n",
-    "print(f\"Average Improvement Percentage: {avg_improvement_percentage:.2f}%\")\n",
-    "\n",
-    "# Save the DataFrame to a new CSV file\n",
-    "df_gpt.to_csv('new_resumes_gpt_wsimgpt.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average Improvement Percentage: 1.66%\n"
+      "Average Improvement Percentage: 1.65%\n"
      ]
     }
    ],
@@ -307,6 +284,39 @@
     "\n",
     "# Save the DataFrame to a new CSV file\n",
     "df.to_csv('new_resumes_wsimgpt.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Improvement Percentage: 2.22%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage with a DataFrame 'df_gpt'\n",
+    "df_gpt = pd.read_csv('new_resumes_gpt.csv')  # Assuming you load your DataFrame from a CSV file\n",
+    "\n",
+    "# Apply the function to each row\n",
+    "df_gpt[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df_gpt.apply(process_resume_row, axis=1)\n",
+    "\n",
+    "# Calculate improvement percentage, handle division by zero and negative values\n",
+    "df_gpt['improvement_percentage'] = df_gpt.apply(\n",
+    "    lambda row: max(((row['new_resume_job_similarity'] - row['resume_job_similarity']) / row['resume_job_similarity']) * 100, 0) if row['resume_job_similarity'] else 0, axis=1\n",
+    ")\n",
+    "\n",
+    "# Print the average improvement percentage\n",
+    "avg_improvement_percentage = df_gpt['improvement_percentage'].mean()\n",
+    "print(f\"Average Improvement Percentage: {avg_improvement_percentage:.2f}%\")\n",
+    "\n",
+    "# Save the DataFrame to a new CSV file\n",
+    "df_gpt.to_csv('new_resumes_gpt_wsimgpt.csv', index=False)"
    ]
   }
  ],
