--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,11 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_resume_row(row):\n",
+    "# Process each row of the dataframe\n",
+    "def process_resume_row(row, threshold=0.3):\n",
     "    if pd.isna(row['new_resume']):\n",
     "        return pd.Series([0.0, 0.0, 0.0, 0.0, 0.0])  # Assign 0 similarity for empty new_resume\n",
     "    try:\n",
@@ -192,11 +193,23 @@
     "        work_ex_score = cosine_similarity(work_ex_resume_normalized, work_ex_new_resume_normalized)\n",
     "        projects_score = cosine_similarity(projects_resume_normalized, projects_new_resume_normalized)\n",
     "        full_resume_score = cosine_similarity(full_resume_normalized, full_new_resume_normalized)\n",
-    "        resume_job_score = cosine_similarity(full_resume_normalized, full_job_normalized)\n",
-    "        new_resume_job_score = cosine_similarity(full_new_resume_normalized, full_job_normalized)\n",
     "\n",
-    "        # Return similarity scores\n",
-    "        return pd.Series([work_ex_score, projects_score, full_resume_score, resume_job_score, new_resume_job_score])\n",
+    "        # Apply threshold and calculate cosine similarities for job match\n",
+    "        if work_ex_score < threshold or projects_score < threshold:\n",
+    "            resume_job_score = 0.0\n",
+    "            new_resume_job_score = 0.0\n",
+    "        else:\n",
+    "            resume_job_score = cosine_similarity(full_resume_normalized, full_job_normalized)\n",
+    "            new_resume_job_score = cosine_similarity(full_new_resume_normalized, full_job_normalized)\n",
+    "\n",
+    "        # Round similarity scores to 2 decimal places\n",
+    "        return pd.Series([\n",
+    "            round(work_ex_score, 2), \n",
+    "            round(projects_score, 2), \n",
+    "            round(full_resume_score, 2), \n",
+    "            round(resume_job_score, 2), \n",
+    "            round(new_resume_job_score, 2)\n",
+    "        ])\n",
     "\n",
     "    except json.JSONDecodeError:\n",
     "        # Handle JSON decoding errors\n",
@@ -205,47 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Improvement Percentage: 185.71%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example usage with a DataFrame 'df_gpt'\n",
-    "df_gpt = pd.read_csv('new_resumes_gpt.csv')  # Assuming you load your DataFrame from a CSV file\n",
-    "\n",
-    "# Apply the function to each row\n",
-    "df_gpt[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df_gpt.apply(process_resume_row, axis=1)\n",
-    "\n",
-    "# Calculate improvement percentage, handle division by zero\n",
-    "df_gpt['improvement_percentage'] = df_gpt.apply(\n",
-    "    lambda row: ((row['new_resume_job_similarity'] - row['resume_job_similarity']) / row['resume_job_similarity']) * 100 if row['resume_job_similarity'] else 0, axis=1\n",
-    ")\n",
-    "\n",
-    "# Print the average improvement percentage\n",
-    "avg_improvement_percentage = df_gpt['improvement_percentage'].mean()\n",
-    "print(f\"Average Improvement Percentage: {avg_improvement_percentage:.2f}%\")\n",
-    "\n",
-    "# Save the DataFrame to a new CSV file\n",
-    "df_gpt.to_csv('new_resumes_gpt_wsim.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average Improvement Percentage: 254.77%\n"
+      "Average Improvement Percentage: 24.84%\n"
      ]
     }
    ],
@@ -267,6 +247,39 @@
     "\n",
     "# Save the DataFrame to a new CSV file\n",
     "df.to_csv('new_resumes_wsim.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Improvement Percentage: 185.93%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage with a DataFrame 'df_gpt'\n",
+    "df_gpt = pd.read_csv('new_resumes_gpt.csv')  # Assuming you load your DataFrame from a CSV file\n",
+    "\n",
+    "# Apply the function to each row\n",
+    "df_gpt[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df_gpt.apply(process_resume_row, axis=1, threshold=0.0)\n",
+    "\n",
+    "# Calculate improvement percentage, handle division by zero\n",
+    "df_gpt['improvement_percentage'] = df_gpt.apply(\n",
+    "    lambda row: ((row['new_resume_job_similarity'] - row['resume_job_similarity']) / row['resume_job_similarity']) * 100 if row['resume_job_similarity'] else 0, axis=1\n",
+    ")\n",
+    "\n",
+    "# Print the average improvement percentage\n",
+    "avg_improvement_percentage = df_gpt['improvement_percentage'].mean()\n",
+    "print(f\"Average Improvement Percentage: {avg_improvement_percentage:.2f}%\")\n",
+    "\n",
+    "# Save the DataFrame to a new CSV file\n",
+    "df_gpt.to_csv('new_resumes_gpt_wsim.csv', index=False)"
    ]
   }
  ],
