--- a/metrics_final.ipynb
+++ b/metrics_final.ipynb
@@ -237,6 +237,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "132"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count the number of resumes that have resume_job_similarity 0 but projects_similarity > 0\n",
+    "count = 0\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['resume_job_similarity'] == 0 and row['projects_similarity'] > 0:\n",
+    "        count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
